--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li><a href="productos.html#velas">Velas</a></li>
                 </ul>
             </li>
-            <li><a href="eventos.html">Eventos</a></li>
+            <li><a href="mayorista.html">Mayorista</a></li>
             <li><a href="info.html">+ Info</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
@@ -67,8 +67,8 @@
                 <div class="boton nos"><a href="info.html">Curiosidades</a></div>
             </articule>
             <articule class="art tres">
-                <img src="image/home3.png" alt="eventos">
-                <div class="boton nos"><a href="eventos.html">Evento</a></div>
+                <img src="image/home3.png" alt="mayorista">
+                <div class="boton nos"><a href="mayorista.html">mayorista</a></div>
             </articule>
         </div>
     </section>
@@ -98,7 +98,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="nosotras.html">Nosotras</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li><a href="eventos.html">Eventos</a></li>
+                    <li><a href="mayorista.html">Mayorista</a></li>
                     <li><a href="info.html">+ Info</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
