--- a/info.html
+++ b/info.html
@@ -43,7 +43,7 @@
                     <li><a href="productos.html#velas">Velas</a></li>
                 </ul>
             </li>
-            <li><a href="eventos.html">Eventos</a></li>
+            <li><a href="mayorista.html">Mayorista</a></li>
             <li><a href="info.html">+ Info</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
@@ -217,7 +217,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="nosotras.html">Nosotras</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li><a href="eventos.html">Eventos</a></li>
+                    <li><a href="mayorista.html">Mayorista</a></li>
                     <li><a href="info.html">+ Info</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
