--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Ruh | Esencia</title>
 </head>
 
-<body class="grid-home">
-<!-- inicio header  -->
+<body>
+
+    <!-- inicio header  -->
     <header>
         <div class="barra">
             <div class="logo">
@@ -28,52 +31,132 @@
             </div>
         </div>
     </header>
-<!-- inicio nav  -->
-    <nav class="botonera">
-        <ul class="botonera_lista">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="nosotras.html">Nosotras</a></li>
-            <li><a href="productos.html">Productos</a>
-                <ul>
-                    <li> <a href="productos.html#sahumerios">Sahumerios</a></li>
-                    <li><a href="productos.html#sahumos">Sahumos y Defumadores</a></li>
-                    <li><a href="productos.html#velas">Velas</a></li>
+    <!-- inicio nav  -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nosotras.html">Nosotras</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="productos.html" id="navbarDropdownMenuLink"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Productos
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="productos.html#sahumerios">Sahumerios</a></li>
+                            <li><a class="dropdown-item" href="productos.html#sahumos">Sahumos y Defumadores</a></li>
+                            <li><a class="dropdown-item" href="productos.html#velas">Velas</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mayorista.html">Mayorista</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="info.html">+ Info</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
                 </ul>
-            </li>
-            <li><a href="mayorista.html">Mayorista</a></li>
-            <li><a href="info.html">+ Info</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
+            </div>
+        </div>
     </nav>
 
-<!-- section 1 -->
+    <!--   section 1 -->
 
     <section class="section-uno">
-        <div class="portada">
-            <p>Esencias para reconectar <br> y despertar sentidos.</p>
+
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="Image/portada.png" class="d-block w-100" alt="portada">
+                    <div class="carousel-caption d-none d-md-block">
+                        <p>Esencias para reconectar <br>y despertar sentidos.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="Image/portada1.png" class="d-block w-100" alt="portada1">
+                    <div class="carousel-caption d-none d-md-block">
+                        <p>Esencias para reconectar <br>y despertar sentidos.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="Image/portada2.png" class="d-block w-100" alt="portada2">
+                    <div class="carousel-caption d-none d-md-block">
+                        <p>Esencias para reconectar <br>y despertar sentidos.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+    </section>
+
+    <!-- seccion 2 -->
+
+    <section id="cards my-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 p-4">
+                    <div class="card card-home">
+                        <img src="image/home1.png" class="card-img-top" alt="productos">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 p-4">
+                    <div class="card card-home">
+                        <img src="image/home2.png" class="card-img-top" alt="CURIOSIDADES">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 p-4">
+                    <div class="card card-home">
+                        <img src="image/home3.png" class="card-img-top" alt="MAYORISTA">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up
+                                the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-<!-- seccion 2 -->
- 
-    <section class="section-dos">
-        <div class="main">
-            <articule class="art uno">
-                <img src="image/home1.png" alt="productos">
-                <div class="boton nos"><a href="productos.html">Productos</a></div>
-            </articule>
-            <articule class="art dos">
-                <img src="image/home2.png" alt="mas-info">
-                <div class="boton nos"><a href="info.html">Curiosidades</a></div>
-            </articule>
-            <articule class="art tres">
-                <img src="image/home3.png" alt="mayorista">
-                <div class="boton nos"><a href="mayorista.html">mayorista</a></div>
-            </articule>
-        </div>
-    </section>
-
-<!-- seccion 3 -->
+    <!-- seccion 3 -->
 
     <section class="section-tres">
 
@@ -88,7 +171,7 @@
         </div>
     </section>
 
-<!-- footer -->
+    <!-- footer -->
 
     <footer>
         <div class="foot">
@@ -133,6 +216,15 @@
             </section>
         </div>
     </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
+
 </body>
 
 </html>
