--- a/index.html
+++ b/index.html
@@ -18,22 +18,29 @@
 
     <!-- inicio header  -->
     <header>
+
         <div class="barra">
             <div class="logo">
                 <img src="Image/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
             <div class="redes_head">
-                <a href="https://www.instagram.com/ruh.esencia/" target="_blank" class="redes_head1">
-                    <img src="logos/insta-head.png" alt="Instagram" width="20%"></a>
+                <a href="https://www.instagram.com/ruh.esencia/80X80" target="_blank" class="redes_head1">
+                    <img src="logos/insta-head.png" alt="Instagram" width="15%"></a>
                 <a href="https://www.facebook.com" target="_blank" class="redes_head2">
-                    <img src="logos/face-head.png" alt="Facebook" width=20%></a>
+                    <img src="logos/face-head.png" alt="Facebook" width=15%></a>
             </div>
         </div>
     </header>
+
     <!-- inicio nav  -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
+            <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -42,9 +49,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="nosotras.html">Nosotras</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="productos.html" id="navbarDropdownMenuLink"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <li class="nav-item">
+                        <a class="nav-link" href="productos.html">
                             Productos
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -84,19 +90,19 @@
                 <div class="carousel-item active">
                     <img src="Image/portada.png" class="d-block w-100" alt="portada">
                     <div class="carousel-caption d-none d-md-block">
-                        <p>Esencias para reconectar <br>y despertar sentidos.</p>
+                        <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="Image/portada1.png" class="d-block w-100" alt="portada1">
                     <div class="carousel-caption d-none d-md-block">
-                        <p>Esencias para reconectar <br>y despertar sentidos.</p>
+                        <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="Image/portada2.png" class="d-block w-100" alt="portada2">
                     <div class="carousel-caption d-none d-md-block">
-                        <p>Esencias para reconectar <br>y despertar sentidos.</p>
+                        <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                     </div>
                 </div>
             </div>
@@ -116,60 +122,57 @@
 
     <!-- seccion 2 -->
 
-    <section id="cards my-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 p-4">
-                    <div class="card card-home">
-                        <img src="image/home1.png" class="card-img-top" alt="productos">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-4 p-4 my-5">
+                <div class="card card-home">
+                    <img src="image/home1.png" class="card-img-top" alt="productos">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of the card's content.</p>
+                        <a href="productos.html" class="btn btn-primary">Productos</a>
                     </div>
                 </div>
-                <div class="col-md-4 p-4">
-                    <div class="card card-home">
-                        <img src="image/home2.png" class="card-img-top" alt="CURIOSIDADES">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+            </div>
+            <div class="col-4 p-4 my-5">
+                <div class="card card-home">
+                    <img src="image/home2.png" class="card-img-top" alt="CURIOSIDADES">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the
+                            bulk of the card's content.</p>
+                        <a href="info.html" class="btn btn-primary">Curiosidades</a>
                     </div>
                 </div>
-                <div class="col-md-4 p-4">
-                    <div class="card card-home">
-                        <img src="image/home3.png" class="card-img-top" alt="MAYORISTA">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up
-                                the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+            </div>
+            <div class="col-4 p-4 my-5">
+                <div class="card card-home">
+                    <img src="image/home3.png" class="card-img-top" alt="MAYORISTA">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up
+                            the bulk of the card's content.</p>
+                        <a href="mayorista.html" class="btn btn-primary">Mayorista</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+
 
     <!-- seccion 3 -->
 
-    <section class="section-tres">
 
-        <div class="home-nosotras">
-            <div class="home-nosotras-texto">
+    <div class="container">
+        <div class="row">
+            <div class="col-4 home-nosotras">
                 <h2>Nosotras </h2>
                 <p>Te compartimos un poco de nosotras y de quienes estan atras de Ruh.</p>
                 <div class="boton nos"><a href="nosotras.html">CONOCENOS</a></div>
             </div>
-            <img src="image/nosotras.jpg" alt="nosotras">
-
+            <div class="col-7">
+                <img class="img_nosotras" src="image/nosotras.jpg" alt="nosotras">
+            </div>
         </div>
-    </section>
+    </div>
 
     <!-- footer -->
 
@@ -218,13 +221,9 @@
     </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-    </script>
-
 </body>
 
 </html>
