--- a/nosotras.html
+++ b/nosotras.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/style.css">
     <title>Ruh | Esencia</title>
@@ -13,37 +15,59 @@
 <body class="grid-nos">
     <!-- header -->
     <header>
+
         <div class="barra">
             <div class="logo">
                 <img src="Image/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
             <div class="redes_head">
-                <a href="https://www.instagram.com/ruh.esencia/" target="_blank" class="redes_head1">
-                    <img src="logos/insta-head.png" alt="Instagram" width="20%"></a>
+                <a href="https://www.instagram.com/ruh.esencia/80X80" target="_blank" class="redes_head1">
+                    <img src="logos/insta-head.png" alt="Instagram" width="15%"></a>
                 <a href="https://www.facebook.com" target="_blank" class="redes_head2">
-                    <img src="logos/face-head.png" alt="Facebook" width=20%></a>
+                    <img src="logos/face-head.png" alt="Facebook" width=15%></a>
             </div>
         </div>
     </header>
 
-    <!-- nav -->
-
-    <nav class="botonera">
-        <ul class="botonera_lista">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="nosotras.html">Nosotras</a></li>
-            <li><a href="productos.html">Productos</a>
-                <ul>
-                    <li> <a href="productos.html#sahumerios">Sahumerios</a></li>
-                    <li><a href="productos.html#sahumos">Sahumos y Defumadores</a></li>
-                    <li><a href="productos.html#velas">Velas</a></li>
+    <!-- inicio nav  -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nosotras.html">Nosotras</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="productos.html">
+                            Productos
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="productos.html#sahumerios">Sahumerios</a></li>
+                            <li><a class="dropdown-item" href="productos.html#sahumos">Sahumos y Defumadores</a></li>
+                            <li><a class="dropdown-item" href="productos.html#velas">Velas</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mayorista.html">Mayorista</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="info.html">+ Info</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
                 </ul>
-            </li>
-            <li><a href="mayorista.html">Mayorista</a></li>
-            <li><a href="info.html">+ Info</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
+            </div>
+        </div>
     </nav>
 
     <!-- section 1 -->
@@ -67,9 +91,11 @@
 
     <!-- Section 2 -->
 
-    <section class="nos_main1">
-        <img src="Image/jose.png" alt="Jose Ramos" class="nos_main_img1">
-        <article class="nos_main_art1">
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <img src="Image/jose.png" alt="Jose Ramos" class="nos_main_img">
+        <article class="nos_main_art">
             <p>Hola, soy Jose, lic. en Gestion Ambiental y una de las creadoras de RUH. Esta foto, define gran
                 parte
                 de
@@ -82,13 +108,10 @@
                 él
                 y es por eso que de grande elegí estudiar Gestión Ambiental.</p>
         </article>
-    </section>
-
-    <!-- section 3 -->
-
-    <section class="nos_main2">
-        <img src="Image/mica.png" alt="Mica Bergliaffa" class="nos_main_img2">
-        <article class="nos_main_art2">
+        </div>
+        <div class="col-6">
+            <img src="Image/mica.png" alt="Mica Bergliaffa" class="nos_main_img">
+        <article class="nos_main_art">
             <p>Hola, soy Mica, arquitecta y una de las fundadoras de Ruh, pero ademas, como veran,
                 tambien
                 soy profe de yoga.
@@ -100,7 +123,9 @@
                 su
                 esencia.</p>
         </article>
-    </section>
+        </div>
+    </div>
+</div>
 
     <!-- footer -->
 
@@ -147,6 +172,13 @@
             </section>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+</script>
+
 </body>
 
 </html>
