--- a/productos.html
+++ b/productos.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/style.css">
     <title>Ruh | Esencia</title>
@@ -30,21 +32,38 @@
         </div>
     </header>
 
-    <nav class="botonera">
-        <ul class="botonera_lista">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="nosotras.html">Nosotras</a></li>
-            <li><a href="productos.html">Productos</a>
-                <ul>
-                    <li> <a href="productos.html#sahumerios">Sahumerios</a></li>
-                    <li><a href="productos.html#sahumos">Sahumos y Defumadores</a></li>
-                    <li><a href="productos.html#velas">Velas</a></li>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nosotras.html">Nosotras</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="productos.html">
+                            Productos
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="productos.html#sahumerios">Sahumerios</a></li>
+                            <li><a class="dropdown-item" href="productos.html#sahumos">Sahumos y Defumadores</a></li>
+                            <li><a class="dropdown-item" href="productos.html#velas">Velas</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mayorista.html">Mayorista</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="info.html">+ Info</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
                 </ul>
-            </li>
-            <li><a href="mayorista.html">Mayorista</a></li>
-            <li><a href="info.html">+ Info</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
+            </div>
+        </div>
     </nav>
 <div class="tit">
     <h2>Nuestos Productos</h2>
@@ -164,6 +183,13 @@
             </section>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+</script>
+
 </body>
 
 </html>
