--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
     <!-- seccion 2 -->
 
     <div class="container">
-        <div class="row">
-            <div class="col-4 p-4 my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-4 col-sm-9 p-4 my-5">
                 <div class="card card-home">
                     <img src="image/home1.png" class="card-img-top" alt="productos">
                     <div class="card-body">
@@ -134,7 +134,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 p-4 my-5">
+            <div class="col-md-4 col-sm-9 p-4 my-5">
                 <div class="card card-home">
                     <img src="image/home2.png" class="card-img-top" alt="CURIOSIDADES">
                     <div class="card-body">
@@ -144,7 +144,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 p-4 my-5">
+            <div class="col-md-4 col-sm-9 p-4 my-5">
                 <div class="card card-home">
                     <img src="image/home3.png" class="card-img-top" alt="MAYORISTA">
                     <div class="card-body">
@@ -162,13 +162,13 @@
 
 
     <div class="container">
-        <div class="row">
-            <div class="col-4 home-nosotras">
+        <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-6 home-nosotras">
                 <h2>Nosotras </h2>
                 <p>Te compartimos un poco de nosotras y de quienes estan atras de Ruh.</p>
                 <div class="boton nos"><a href="nosotras.html">CONOCENOS</a></div>
             </div>
-            <div class="col-7">
+            <div class="col-lg-8 col-md-9">
                 <img class="img_nosotras" src="image/nosotras.jpg" alt="nosotras">
             </div>
         </div>
@@ -219,7 +219,6 @@
             </section>
         </div>
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
