--- a/nosotras.html
+++ b/nosotras.html
@@ -12,10 +12,9 @@
     <title>Ruh | Esencia</title>
 </head>
 
-<body class="grid-nos">
+<body>
     <!-- header -->
     <header>
-
         <div class="barra">
             <div class="logo">
                 <img src="Image/logo.jpg" alt="Logo" class="logo-img">
@@ -92,8 +91,8 @@
     <!-- Section 2 -->
 
 <div class="container">
-    <div class="row">
-        <div class="col-6">
+    <div class="row justify-content-center">
+        <div class="col-lg-6 col-md-8">
             <img src="Image/jose.png" alt="Jose Ramos" class="nos_main_img">
         <article class="nos_main_art">
             <p>Hola, soy Jose, lic. en Gestion Ambiental y una de las creadoras de RUH. Esta foto, define gran
@@ -109,7 +108,7 @@
                 y es por eso que de grande elegí estudiar Gestión Ambiental.</p>
         </article>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6 col-md-8">
             <img src="Image/mica.png" alt="Mica Bergliaffa" class="nos_main_img">
         <article class="nos_main_art">
             <p>Hola, soy Mica, arquitecta y una de las fundadoras de Ruh, pero ademas, como veran,
