--- a/contacto.html
+++ b/contacto.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/style.css">
     <title>Ruh | Esencia</title>
 </head>
 
-<body class="grid-contacto">
+<body>
+    <!-- header -->
     <header>
         <div class="barra">
             <div class="logo">
@@ -20,16 +21,22 @@
                 <h1>Ruh - Esencia</h1>
             </div>
             <div class="redes_head">
-                <a href="https://www.instagram.com/ruh.esencia/" target="_blank" class="redes_head1">
-                    <img src="logos/insta-head.png" alt="Instagram" width="20%"></a>
+                <a href="https://www.instagram.com/ruh.esencia/80X80" target="_blank" class="redes_head1">
+                    <img src="logos/insta-head.png" alt="Instagram" width="15%"></a>
                 <a href="https://www.facebook.com" target="_blank" class="redes_head2">
-                    <img src="logos/face-head.png" alt="Facebook" width=20%></a>
+                    <img src="logos/face-head.png" alt="Facebook" width=15%></a>
             </div>
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-lg">
+    <!-- inicio nav  -->
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
+            <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -62,72 +69,79 @@
         </div>
     </nav>
 
-    <div class="main_contacto">
-        <section class="section_contacto">
-            <div class="datos-contacto">
-                <p class="contacto-tit">Contacto</p>
-                <div class="item_contacto">
-                    <img src="logos/wa-icono.svg" alt="WP" widht=30 height=30>
-                    <h5>+54 9 3512297942</h5>
-                </div>
-                <div class="item_contacto">
-                    <img src="logos/mail-icono.svg" alt="Gmail" widht=30 height=30>
-                    <h5>ruh.esencia@gmail.com</h5>
-                </div>
-                <div class="item_contacto">
-                    <img src="logos/ubicacion-icono.svg" alt="Ubicación" widht=30 height=30>
-                    <h5>Recta Martinolli 7759</h5>
+    <div class="container">
+        <div class="row my-5 justify-content-center">
+            <div class="col-lg-6 col-md-10">
+                <div class="row">
+                    <div class="col-6">
+                        <p class="contacto-tit">Contacto</p>
+                        <div class="item_contacto">
+                            <img src="logos/wa-icono.svg" alt="WP" widht=30 height=30>
+                            <h5>+54 9 3512297942</h5>
+                        </div>
+                        <div class="item_contacto">
+                            <img src="logos/mail-icono.svg" alt="Gmail" widht=30 height=30>
+                            <h5>ruh.esencia@gmail.com</h5>
+                        </div>
+                        <div class="item_contacto">
+                            <img src="logos/ubicacion-icono.svg" alt="Ubicación" widht=30 height=30>
+                            <h5>Recta Martinolli 7759</h5>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <p class="contacto-tit">Nuestas Redes Sociales</p>
+                        <div class="item_redes">
+                            <img src="logos/Insta-logo.png" alt="Instagram">
+                            <a href="https://www.instagram.com/ruh.esencia/" target="_blank">Seguinos en Instagram</a>
+                        </div>
+                        <div class="item_redes">
+                            <img src="logos/Face-logo.png" alt="Facebook">
+                            <a href="https://www.facebook.com" target="_blank"> Seguinos en Facebook</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 mt-5">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3407.410012813745!2d-64.27039298505886!3d-31.347663000067364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329e9fa656daa5%3A0x76881781dbca37b8!2sAv.%20Recta%20Martinolli%207759%2C%20X5147HZA%20C%C3%B3rdoba%2C%20Argentina!5e0!3m2!1ses-419!2sit!4v1646784326315!5m2!1ses-419!2sit"
+                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                class="mapa"></iframe>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="datos-redes"> 
-                <p class="contacto-tit">Nuestas Redes Sociales</p>
-                <div class="item_redes">
-                    <img src="logos/Insta-logo.png" alt="Instagram">
-                    <a href="https://www.instagram.com/ruh.esencia/" target="_blank">Seguinos en Instagram</a>
-                </div>
-                <div class="item_redes">
-                    <img src="logos/Face-logo.png" alt="Facebook">
-                    <a href="https://www.facebook.com" target="_blank"> Seguinos en Facebook</a>
-                </div>
-            </div>
-        </section>
+            <div class="col-lg-6 col-md-10">
+                <div class="form-container">
+                    <p class="form-tit">Contactate con nosotras</p>
+                    <form action="form.php" method="POST" class="contacto-form">
+                        <div class="form-row">
+                            <label for="full-name">Nombre</label>
+                            <input type="text" id="full-name" name="nombre">
+                        </div>
+                        <div class="form-row">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" placeholder="Ej maria@gmail.com" name="email">
+                        </div>
+                        <div class="form-row">
+                            <label for="telefono">Telefono</label>
+                            <input type="number" id="telefono" name="telefono">
+                        </div>
 
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3407.410012813745!2d-64.27039298505886!3d-31.347663000067364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329e9fa656daa5%3A0x76881781dbca37b8!2sAv.%20Recta%20Martinolli%207759%2C%20X5147HZA%20C%C3%B3rdoba%2C%20Argentina!5e0!3m2!1ses-419!2sit!4v1646784326315!5m2!1ses-419!2sit"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="mapa"></iframe>
+                        <div class="form-row">
+                            <label for="abstract">Mensaje</label>
+                            <textarea name="textarea" id="abstract"></textarea>
+                            <p class="instructions">Describe tu consulta en 500 palabras o menos</p>
+                        </div>
+
+                        <div class="form-row">
+                            <button type="submit">Enviar</button>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <section class="formulario">
-        <div class="form-container">
-        <p class="form-tit">Contactate con nosotras</p>
-
-        <form action="form.php" method="POST" class="contacto-form">
-            <div class="form-row">
-                <label for="full-name">Nombre</label>
-                <input type="text" id="full-name" name="nombre">
-            </div>
-            <div class="form-row">
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Ej maria@gmail.com" name="email">
-            </div>
-            <div class="form-row">
-                <label for="telefono">Telefono</label>
-                <input type="number" id="telefono" name="telefono">
-            </div>
-
-            <div class="form-row">
-                <label for="abstract">Mensaje</label>
-                <textarea name="textarea" id="abstract"></textarea>
-                <p class="instructions">Describe tu consulta en 500 palabras o menos</p>
-            </div>
-
-            <div class="form-row">
-                <button type="submit">Enviar</button>
-            </div>
-       
-        </form>
-    </div>
-    </section>
 
     <footer>
         <div class="foot">
@@ -171,13 +185,16 @@
                 </div>
             </section>
         </div>
+        </div>
+        </div>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-</script>
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
 
 </body>
 
