--- a/mayorista.html
+++ b/mayorista.html
@@ -12,28 +12,32 @@
     <title>Ruh | Esencia</title>
 </head>
 
-<body class="grid-mayorista"> 
-    <header>
-        <div class="barra">
+<body> 
+     <!-- header -->
+     <header>
 
+        <div class="barra">
             <div class="logo">
                 <img src="Image/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
-
             <div class="redes_head">
-                <a href="https://www.instagram.com/ruh.esencia/" target="_blank" class="redes_head1">
-                    <img src="logos/insta-head.png" alt="Instagram" width="20%"></a>
+                <a href="https://www.instagram.com/ruh.esencia/80X80" target="_blank" class="redes_head1">
+                    <img src="logos/insta-head.png" alt="Instagram" width="15%"></a>
                 <a href="https://www.facebook.com" target="_blank" class="redes_head2">
-                    <img src="logos/face-head.png" alt="Facebook" width=20%></a>
+                    <img src="logos/face-head.png" alt="Facebook" width=15%></a>
             </div>
-
-
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-lg">
+    <!-- inicio nav  -->
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
+            <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -73,6 +77,27 @@
     <p>- Eleginos para acompañarte en tu evento -</p>
 </section>
 
+<div class="container p-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-3 col-md-5 col-sm-8 p-2">
+            <img src="image/evento-1.png" alt="primera" class="item_mayor">
+        </div>
+        <div class="col-lg-3 col-md-5 col-sm-8 p-2">
+            <img src="image/evento2.png" alt="segunda" class="item_mayor">
+        </div>
+        <div class="col-lg-3 col-md-5 col-sm-8 p-2">
+            <img src="image/evento3.png" alt="tercera" class="item_mayor">
+        </div>
+        <div class="col-lg-3 col-md-5 col-sm-8 p-2">
+            <img src="Image/Evento4.png" alt="cuarto" class="item_mayor">
+        </div>
+    </div>
+</div>
+<div class="btn boton">
+<a href="contacto.html">Hace tu Reserva</a>
+</div>
+<!--  
+
     <section class="container_mayor">
         <img src="image/evento-1.png" alt="primera" class="item_mayor">
         <img src="image/evento2.png" alt="segunda" class="item_mayor">
@@ -83,7 +108,7 @@
         <img src="" alt="">
         <img src="" alt="">
         <a href="contacto.html">Hace tu Reserva</a>
-    </section>
+    </section>-->
     <!-- -------------------------------- Boton -------------------------------- -->
     <!-- <div class="boton_evento"> -->
       
