--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </div>
             <div class="redes_head">
                 <a href="https://www.instagram.com/ruh.esencia/80X80" target="_blank" class="redes_head1">
-                    <img src="logos/insta-head.png" alt="Instagram" width="15%"></a>
-                <a href="https://www.facebook.com" target="_blank" class="redes_head2">
-                    <img src="logos/face-head.png" alt="Facebook" width=15%></a>
+                    <img src="logos/insta-head.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com" target="_blank" class="redes_head1">
+                    <img src="logos/face-head.png" alt="Facebook"></a>
             </div>
         </div>
     </header>
@@ -75,8 +75,6 @@
 
     <!--   section 1 -->
 
-    <section class="section-uno">
-
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -118,38 +116,33 @@
             </button>
         </div>
 
-    </section>
-
     <!-- seccion 2 -->
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-4 col-sm-9 p-4 my-5">
+            <div class="col-md-4 col-sm-9 p-4 mt-5 cont-card">
                 <div class="card card-home">
                     <img src="image/home1.png" class="card-img-top" alt="productos">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of the card's content.</p>
+                        <p class="card-text">Te mostramos nuestra variedad de productos y aromas, elegi el que mas se conecte con tus sentidos.</p>
                         <a href="productos.html" class="btn btn-primary">Productos</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-9 p-4 my-5">
+            <div class="col-md-4 col-sm-9 p-4 mt-5 cont-card">
                 <div class="card card-home">
                     <img src="image/home2.png" class="card-img-top" alt="CURIOSIDADES">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the
-                            bulk of the card's content.</p>
+                        <p class="card-text">Te contamos el uso y curiosidades de nuestros productos y te compartimos info. util para cuidar y estar en contacto con la naturaleza.</p>
                         <a href="info.html" class="btn btn-primary">Curiosidades</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-9 p-4 my-5">
+            <div class="col-md-4 col-sm-9 p-4 mt-5 cont-card">
                 <div class="card card-home">
                     <img src="image/home3.png" class="card-img-top" alt="MAYORISTA">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up
-                            the bulk of the card's content.</p>
+                        <p class="card-text">Sabias que tambien podes vender nustros productos en tu local? o eleginos para souvenir de tu boda o evento.</p>
                         <a href="mayorista.html" class="btn btn-primary">Mayorista</a>
                     </div>
                 </div>
@@ -197,6 +190,9 @@
                         <img src="logos/Insta-logo.png" alt="Instagram" class="redes-img"> </a>
                     <a href="https://www.facebook.com" target="_blank" class="redes_link2">
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
+                </div>
+                <div class="logo-f">
+                    <p class="logo-tit-f">| Ruh - Esencia |</p> 
                 </div>
             </div>
 
