--- a/info.html
+++ b/info.html
@@ -16,6 +16,7 @@
 <body>
     <!-- header -->
     <header>
+
         <div class="barra">
             <div class="logo">
                 <img src="Image/logo.jpg" alt="Logo" class="logo-img">
@@ -23,9 +24,9 @@
             </div>
             <div class="redes_head">
                 <a href="https://www.instagram.com/ruh.esencia/80X80" target="_blank" class="redes_head1">
-                    <img src="logos/insta-head.png" alt="Instagram" width="15%"></a>
-                <a href="https://www.facebook.com" target="_blank" class="redes_head2">
-                    <img src="logos/face-head.png" alt="Facebook" width=15%></a>
+                    <img src="logos/insta-head.png" alt="Instagram" width="40"></a>
+                <a href="https://www.facebook.com" target="_blank" class="redes_head1">
+                    <img src="logos/face-head.png" alt="Facebook" width="40"></a>
             </div>
         </div>
     </header>
@@ -69,6 +70,7 @@
             </div>
         </div>
     </nav>
+
 
     <main class="section-info">
         <h2>Sobre nuestros productos...</h2>
@@ -263,6 +265,9 @@
                     <a href="https://www.facebook.com" target="_blank" class="redes_link2">
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
+                <div class="logo-f">
+                    <p class="logo-tit-f">| Ruh - Esencia |</p> 
+                </div>
             </div>
 
             <section class="foot_contacto">
@@ -284,6 +289,7 @@
             </section>
         </div>
     </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
