--- a/productos.html
+++ b/productos.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <  <!-- header -->
+    <!-- header -->
     <header>
 
         <div class="barra">
@@ -23,9 +23,9 @@
             </div>
             <div class="redes_head">
                 <a href="https://www.instagram.com/ruh.esencia/80X80" target="_blank" class="redes_head1">
-                    <img src="logos/insta-head.png" alt="Instagram" width="15%"></a>
-                <a href="https://www.facebook.com" target="_blank" class="redes_head2">
-                    <img src="logos/face-head.png" alt="Facebook" width=15%></a>
+                    <img src="logos/insta-head.png" alt="Instagram" width="40"></a>
+                <a href="https://www.facebook.com" target="_blank" class="redes_head1">
+                    <img src="logos/face-head.png" alt="Facebook" width="40"></a>
             </div>
         </div>
     </header>
@@ -70,7 +70,7 @@
         </div>
     </nav>
 
-    
+
     <div class="tit">
         <h2>Nuestos Productos</h2>
     </div>
@@ -171,6 +171,9 @@
                     <a href="https://www.facebook.com" target="_blank" class="redes_link2">
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
+                <div class="logo-f">
+                    <p class="logo-tit-f">| Ruh - Esencia |</p> 
+                </div>
             </div>
 
             <section class="foot_contacto">
@@ -192,6 +195,7 @@
             </section>
         </div>
     </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
