correcion de error en ruta image

--- a/info.html
+++ b/info.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -19,7 +23,7 @@
 
         <div class="barra">
             <div class="logo">
-                <img src="Image/logo.jpg" alt="Logo" class="logo-img">
+                <img src="image/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
             <div class="redes_head">
@@ -79,7 +83,7 @@
 
             <!-- No anda el autoplay con safari  -->
 
-            <video src="Image/video-sahumar.mov" autoplay muted loop></video>
+            <video src="image/video-sahumar.mov" autoplay muted loop></video>
 
             <article class="main_art_video">
                 <h3 class="main_art_tit">¿Que es y como SAHUMAR?</h3>
