--- a/productos.html
+++ b/productos.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -18,7 +21,7 @@
 
         <div class="barra">
             <div class="logo">
-                <img src="Image/logo.jpg" alt="Logo" class="logo-img">
+                <img src="image/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
             <div class="redes_head">
@@ -95,7 +98,7 @@
                 <p>Linea Premium</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="Image/prod-porta-shau.png" alt="portasahumerio" class="item_img">
+                <img src="image/prod-porta-shau.png" alt="portasahumerio" class="item_img">
                 <p>Porta Sahumerio de madera</p>
             </div>
         </div>
@@ -115,19 +118,19 @@
                 <p>Pastillas Defumadoras</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="Image/prod-piramide.png" alt="Piramides" class="item_img">
+                <img src="image/prod-piramide.png" alt="Piramides" class="item_img">
                 <p>Piramides Defumadoras</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="Image/prod-bombitas.png" alt="Bombitas" class="item_img">
+                <img src="image/prod-bombitas.png" alt="Bombitas" class="item_img">
                 <p>Bombitas Defumadoras</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="Image/prod-siete Chacras.png" alt="7 Chachras" class="item_img">
+                <img src="image/prod-siete Chacras.png" alt="7 Chachras" class="item_img">
                 <p>Bombitas 7 Chakras </p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="Image/prod-sahumadores.png" alt="Sahumadores" class="item_img">
+                <img src="image/prod-sahumadores.png" alt="Sahumadores" class="item_img">
                 <p>Sahumador de ceramica</p>
             </div>
         </div>
@@ -139,11 +142,11 @@
             <section id="sahumos"></section>
             <h3>Sahumos y defumadores</h3>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="Image/prod-velas.png" alt="Velas" class="item_img">
+                <img src="image/prod-velas.png" alt="Velas" class="item_img">
                 <p>Vela con flores</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="Image/prod-velitas.png" alt="Velitas" class="item_img">
+                <img src="image/prod-velitas.png" alt="Velitas" class="item_img">
                 <p>Mini Velitas de madera</p>
             </div>
         </div>
