--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+    <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -22,7 +25,7 @@
 
     <div class="barra">
             <div class="logo">
-                <img src="Image/logo.jpg" alt="Logo" class="logo-img">
+                <img src="image/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
             <div class="redes_head">
@@ -87,19 +90,19 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Image/portada.png" class="d-block w-100" alt="portada">
+                <img src="image/portada.png" class="d-block w-100" alt="portada">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="Image/portada1.png" class="d-block w-100" alt="portada1">
+                <img src="image/portada1.png" class="d-block w-100" alt="portada1">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="Image/portada2.png" class="d-block w-100" alt="portada2">
+                <img src="image/portada2.png" class="d-block w-100" alt="portada2">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
