correccion error img

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="barra">
             <div class="logo">
-                <img src="image/logo.jpg" alt="Logo" class="logo-img">
+                <img src="img/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
             <div class="redes_head">
@@ -90,19 +90,19 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="image/portada.png" class="d-block w-100" alt="portada">
+                <img src="img/portada.png" class="d-block w-100" alt="portada">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="image/portada1.png" class="d-block w-100" alt="portada1">
+                <img src="img/portada1.png" class="d-block w-100" alt="portada1">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="image/portada2.png" class="d-block w-100" alt="portada2">
+                <img src="img/portada2.png" class="d-block w-100" alt="portada2">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
@@ -126,7 +126,7 @@
         <div class="row justify-content-center">
             <div class="col-md-4 col-sm-9 p-4 mt-5 cont-card">
                 <div class="card card-home">
-                    <img src="image/home1.png" class="card-img-top" alt="productos">
+                    <img src="img/home1.png" class="card-img-top" alt="productos">
                     <div class="card-body">
                         <p class="card-text">Te mostramos nuestra variedad de productos y aromas, elegi el que mas se
                             conecte con tus sentidos.</p>
@@ -136,7 +136,7 @@
             </div>
             <div class="col-md-4 col-sm-9 p-4 mt-5 cont-card">
                 <div class="card card-home">
-                    <img src="image/home2.png" class="card-img-top" alt="CURIOSIDADES">
+                    <img src="img/home2.png" class="card-img-top" alt="CURIOSIDADES">
                     <div class="card-body">
                         <p class="card-text">Te contamos el uso y curiosidades de nuestros productos y te compartimos
                             info. util para cuidar y estar en contacto con la naturaleza.</p>
@@ -146,7 +146,7 @@
             </div>
             <div class="col-md-4 col-sm-9 p-4 mt-5 cont-card">
                 <div class="card card-home">
-                    <img src="image/home3.png" class="card-img-top" alt="MAYORISTA">
+                    <img src="img/home3.png" class="card-img-top" alt="MAYORISTA">
                     <div class="card-body">
                         <p class="card-text">Sabias que tambien podes vender nustros productos en tu local? o eleginos
                             para souvenir de tu boda o evento.</p>
@@ -169,7 +169,7 @@
                 <div class="boton nos"><a href="nosotras.html">CONOCENOS</a></div>
             </div>
             <div class="col-lg-8 col-md-9">
-                <img class="img_nosotras" src="image/nosotras.jpg" alt="nosotras">
+                <img class="img_nosotras" src="img/nosotras.jpg" alt="nosotras">
             </div>
         </div>
     </div>
