--- a/info.html
+++ b/info.html
@@ -23,7 +23,7 @@
 
         <div class="barra">
             <div class="logo">
-                <img src="image/logo.jpg" alt="Logo" class="logo-img">
+                <img src="img/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
             <div class="redes_head">
@@ -83,7 +83,7 @@
 
             <!-- No anda el autoplay con safari  -->
 
-            <video src="image/video-sahumar.mov" autoplay muted loop></video>
+            <video src="img/video-sahumar.mov" autoplay muted loop></video>
 
             <article class="main_art_video">
                 <h3 class="main_art_tit">¿Que es y como SAHUMAR?</h3>
@@ -149,13 +149,13 @@
 
             </article>
 
-            <img src="image/palo-santo.jpg" alt="Palo Santo" class="main_img">
+            <img src="img/palo-santo.jpg" alt="Palo Santo" class="main_img">
 
         </section>
 
         <section class="info1">
 
-            <img src="image/velas-soja.jpg" alt="Velas de Soja" class="main_img">
+            <img src="img/velas-soja.jpg" alt="Velas de Soja" class="main_img">
 
             <article class="main_art">
                 <h3 class="main_art_tit">Velas de soja Vs Parafina.</h3>
@@ -183,7 +183,7 @@
         <div class="card mb-3" style="max-width: 1140px; margin: auto;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="image/grounding.jpg" class="img-fluid rounded-start" alt="grounding">
+                    <img src="img/grounding.jpg" class="img-fluid rounded-start" alt="grounding">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -218,7 +218,7 @@
         <div class="card mb-3" style="max-width: 1140px; margin: auto;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="image/cuidado-ambiental.jpeg" class="img-fluid rounded-start" alt="ambiente">
+                    <img src="img/cuidado-ambiental.jpeg" class="img-fluid rounded-start" alt="ambiente">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
