--- a/productos.html
+++ b/productos.html
@@ -21,7 +21,7 @@
 
         <div class="barra">
             <div class="logo">
-                <img src="image/logo.jpg" alt="Logo" class="logo-img">
+                <img src="img/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
             <div class="redes_head">
@@ -86,19 +86,19 @@
             <section id="sahumerios"></section>
             <h3>Sahumerios</h3>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="image/Prod-Palo-Santo.png" alt="Palo Santo" class="item_img">
+                <img src="img/Prod-Palo-Santo.png" alt="Palo Santo" class="item_img">
                 <p>Linea Palo Santo</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="image/prod-saumerios.png" alt="Natural" class="item_img">
+                <img src="img/prod-saumerios.png" alt="Natural" class="item_img">
                 <p>Linea Natural</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="image/prod-s-premium.png" alt="Premium" class="item_img">
+                <img src="img/prod-s-premium.png" alt="Premium" class="item_img">
                 <p>Linea Premium</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="image/prod-porta-shau.png" alt="portasahumerio" class="item_img">
+                <img src="img/prod-porta-shau.png" alt="portasahumerio" class="item_img">
                 <p>Porta Sahumerio de madera</p>
             </div>
         </div>
@@ -110,27 +110,27 @@
             <section id="sahumos"></section>
             <h3>Sahumos y defumadores</h3>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="image/prod-sahumo-1.png" alt="Sahumo" class="item_img">
+                <img src="img/prod-sahumo-1.png" alt="Sahumo" class="item_img">
                 <p>Ramillo de Sahumo</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="image/prod-Pastillas.png" alt="Pastillas" class="item_img">
+                <img src="img/prod-Pastillas.png" alt="Pastillas" class="item_img">
                 <p>Pastillas Defumadoras</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="image/prod-piramide.png" alt="Piramides" class="item_img">
+                <img src="img/prod-piramide.png" alt="Piramides" class="item_img">
                 <p>Piramides Defumadoras</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="image/prod-bombitas.png" alt="Bombitas" class="item_img">
+                <img src="img/prod-bombitas.png" alt="Bombitas" class="item_img">
                 <p>Bombitas Defumadoras</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="image/prod-siete Chacras.png" alt="7 Chachras" class="item_img">
+                <img src="img/prod-siete-chacras.png" alt="7 Chachras" class="item_img">
                 <p>Bombitas 7 Chakras </p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="image/prod-sahumadores.png" alt="Sahumadores" class="item_img">
+                <img src="img/prod-sahumadores.png" alt="Sahumadores" class="item_img">
                 <p>Sahumador de ceramica</p>
             </div>
         </div>
@@ -142,11 +142,11 @@
             <section id="sahumos"></section>
             <h3>Sahumos y defumadores</h3>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="image/prod-velas.png" alt="Velas" class="item_img">
+                <img src="img/prod-velas.png" alt="Velas" class="item_img">
                 <p>Vela con flores</p>
             </div>
             <div class="col-lg-3 col-md-5 col-sm-8">
-                <img src="image/prod-velitas.png" alt="Velitas" class="item_img">
+                <img src="img/prod-velitas.png" alt="Velitas" class="item_img">
                 <p>Mini Velitas de madera</p>
             </div>
         </div>
