--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
 
         <div class="barra">
             <div class="logo">
-                <img src="image/logo.jpg" alt="Logo" class="logo-img">
+                <img src="img/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
             <div class="redes_head">
