--- a/mayorista.html
+++ b/mayorista.html
@@ -21,7 +21,7 @@
 
         <div class="barra">
             <div class="logo">
-                <img src="image/logo.jpg" alt="Logo" class="logo-img">
+                <img src="img/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
             <div class="redes_head">
@@ -80,7 +80,7 @@
     <div class="container-img">
         <div class="box-img">
             <figure>
-                <img src="image/evento1.png" alt="">
+                <img src="img/evento1.jpg" alt="">
             </figure>
         </div>
         <div class="box-img evento-descripcion">
@@ -94,27 +94,27 @@
         </div>
         <div class="box-img">   
             <figure>
-                <img src="image/Evento4.png" alt="">
+                <img src="img/Evento4.png" alt="">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="image/evento-1.png" alt="">
+                <img src="img/evento-1.png" alt="">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="image/IMG_2435.jpg" alt="">
+                <img src="img/IMG_2435.jpg" alt="">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="image/IMG_2448.jpg" alt="">
+                <img src="img/IMG_2448.jpg" alt="">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="image/evento2.png" alt="">
+                <img src="img/evento2.png" alt="">
             </figure>
         </div>
 
