--- a/nosotras.html
+++ b/nosotras.html
@@ -21,7 +21,7 @@
 
         <div class="barra">
             <div class="logo">
-                <img src="image/logo.jpg" alt="Logo" class="logo-img">
+                <img src="img/logo.jpg" alt="Logo" class="logo-img">
                 <h1>Ruh - Esencia</h1>
             </div>
             <div class="redes_head">
@@ -98,7 +98,7 @@
 <div class="container">
     <div class="row justify-content-center card-nos">
         <div class="col-lg-6 col-md-8">
-            <img src="Image/jose.png" alt="Jose Ramos" class="nos_main_img">
+            <img src="img/jose.png" alt="Jose Ramos" class="nos_main_img">
         <article class="nos_main_art">
             <p>Hola, soy Jose, lic. en Gestion Ambiental y una de las creadoras de RUH. Esta foto, define gran
                 parte
@@ -114,7 +114,7 @@
         </article>
         </div>
         <div class="col-lg-6 col-md-8">
-            <img src="Image/mica.png" alt="Mica Bergliaffa" class="nos_main_img">
+            <img src="img/mica.png" alt="Mica Bergliaffa" class="nos_main_img">
         <article class="nos_main_art">
             <p>Hola, soy Mica, arquitecta y una de las fundadoras de Ruh, pero ademas, como veran,
                 tambien
