--- a/contacto.html
+++ b/contacto.html
@@ -81,26 +81,26 @@
                         <p class="contacto-tit">Contacto</p>
                         <div class="item_contacto">
                             <img src="logos/wa-icono.svg" alt="WP" widht=30 height=30>
-                            <h5>+54 9 3512297942</h5>
+                            <p>+54 9 3512297942</p>
                         </div>
                         <div class="item_contacto">
                             <img src="logos/mail-icono.svg" alt="Gmail" widht=30 height=30>
-                            <h5>ruh.esencia@gmail.com</h5>
+                            <p>ruh.esencia@gmail.com</p>
                         </div>
                         <div class="item_contacto">
                             <img src="logos/ubicacion-icono.svg" alt="Ubicación" widht=30 height=30>
-                            <h5>Recta Martinolli 7759</h5>
+                            <p>Recta Martinolli 7759</p>
                         </div>
                     </div>
                     <div class="col-6">
                         <p class="contacto-tit">Nuestas Redes Sociales</p>
                         <div class="item_redes">
                             <img src="logos/Insta-logo.png" alt="Instagram">
-                            <a href="https://www.instagram.com/ruh.esencia/" target="_blank">Seguinos en Instagram</a>
+                            <a href="https://www.instagram.com/ruh.esencia/" target="_blank" class="r-instagram">Seguinos en Instagram</a>
                         </div>
                         <div class="item_redes">
                             <img src="logos/Face-logo.png" alt="Facebook">
-                            <a href="https://www.facebook.com" target="_blank"> Seguinos en Facebook</a>
+                            <a href="https://www.facebook.com" target="_blank" class="r-facebook">Seguinos en Facebook</a>
                         </div>
                     </div>
                     <div class="row">
