aplicando sass II

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="col-lg-4 col-md-6 home-nosotras">
                 <h2>Nosotras </h2>
                 <p>Te compartimos un poco de nosotras y de quienes estan atras de Ruh.</p>
-                <div class="boton nos"><a href="nosotras.html">CONOCENOS</a></div>
+                <div class="btn nos"><a href="nosotras.html">CONOCENOS</a></div>
             </div>
             <div class="col-lg-8 col-md-9">
                 <img class="img_nosotras" src="img/nosotras.jpg" alt="nosotras">
