--- a/mayorista.html
+++ b/mayorista.html
@@ -87,7 +87,7 @@
             <figure>
                 <p>Podes elegir modelo del envase, decoración y etiqueta (te proponemos opciones de diseño o concretamos
                     tu idea)</p>
-                    <div class="btn boton">
+                    <div class="btn">
                         <a href="contacto.html">ESCRIBINOS Y TE ASESORAMOS!</a>
                     </div>
             </figure>
